adjust responsiveness to mobile

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,6 @@
 body {
+    display: flex;
+    justify-content: center;
     margin: 50px;
     background-color: #23252C;
 
@@ -25,7 +27,9 @@ body {
 
 }
 .info--container{
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .info--name-title{
     margin: 0;
@@ -98,4 +102,27 @@ footer {
     padding: 20px 40px;
     justify-content: space-around;
     border-radius: 0 0 10px 10px;
+}
+
+@media (max-width: 480px) {
+    body {
+        margin: 30px;
+    }
+
+    .app--btn{
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+        align-items: center;
+    }
+
+    .app--btn-left{
+        margin: 0;
+    }
+    .about-container > p{
+        font-size: 0.8rem;
+    }
+    .interests-container > p{
+        font-size: 0.8rem;
+    }
 }
